--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@ Nombre: Sandra Zuluaga
 <iframe title="Emisiones Co2" aria-label="chart" id="datawrapper-chart-m794z" src="https://datawrapper.dwcdn.net/m794z/1/" scrolling="no" frameborder="0" style="border: none;" width="600" height="400"></iframe>
 
 
+<iframe title="Top 10 Emisiones CO2 en 2018 " aria-label="Bar Chart" id="datawrapper-chart-yVVrV" src="https://datawrapper.dwcdn.net/yVVrV/1/" scrolling="no" frameborder="0" style="border: none;" width="600" height="4575"></iframe>
+
 
  <h1>Visualización – AG2 </h1>
 
