--- a/index.html
+++ b/index.html
@@ -15,22 +15,21 @@ Nombre: Sandra Zuluaga
 
 <h2> Emision OC2</h2>
 
-<iframe width="600" height="371" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vR3iUGy3y4Fbew1KFztUAVUAxLYTuzxg25w3SKEcrXskfVw2vRqCsRnePZkiRZpyV4LBM6dmYI27nw3/pubchart?oid=577312488&amp;format=interactive"></iframe>
-
-
-
-<iframe width="600" height="371" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vR3iUGy3y4Fbew1KFztUAVUAxLYTuzxg25w3SKEcrXskfVw2vRqCsRnePZkiRZpyV4LBM6dmYI27nw3/pubchart?oid=576145068&amp;format=interactive"></iframe>
+<iframe width="600" height="371" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vR3iUGy3y4Fbew1KFztUAVUAxLYTuzxg25w3SKEcrXskfVw2vRqCsRnePZkiRZpyV4LBM6dmYI27nw3/pubchart?oid=1961961063&amp;format=interactive"></iframe>
 
 <iframe title="Emisiones Co2" aria-label="chart" id="datawrapper-chart-m794z" src="https://datawrapper.dwcdn.net/m794z/1/" scrolling="no" frameborder="0" style="border: none;" width="600" height="400"></iframe>
 
 
 <iframe title="Top 10 Emisiones CO2 en 2018 " aria-label="Bar Chart" id="datawrapper-chart-yVVrV" src="https://datawrapper.dwcdn.net/yVVrV/1/" scrolling="no" frameborder="0" style="border: none;" width="600" height="4575"></iframe>
 
+<h2> Graficos Combinados - Multiple variables</h2>
+
+<iframe width="600" height="371" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vR3iUGy3y4Fbew1KFztUAVUAxLYTuzxg25w3SKEcrXskfVw2vRqCsRnePZkiRZpyV4LBM6dmYI27nw3/pubchart?oid=1890270180&amp;format=interactive"></iframe>
 
  <h1>Visualización – AG2 </h1>
 
 
-  <h1>Visualización – AG3 </h1>
+<h1>Visualización – AG3 </h1>
 
 
 
