--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
 <br>
 Nombre: Sandra Zuluaga
 
-
-<h2> Emision OC2</h2>
+<h2> Emision Co2</h2>
 
 <iframe width="600" height="371" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vR3iUGy3y4Fbew1KFztUAVUAxLYTuzxg25w3SKEcrXskfVw2vRqCsRnePZkiRZpyV4LBM6dmYI27nw3/pubchart?oid=1961961063&amp;format=interactive"></iframe>
 
@@ -26,14 +25,11 @@ Nombre: Sandra Zuluaga
 
 <iframe width="600" height="371" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vR3iUGy3y4Fbew1KFztUAVUAxLYTuzxg25w3SKEcrXskfVw2vRqCsRnePZkiRZpyV4LBM6dmYI27nw3/pubchart?oid=1890270180&amp;format=interactive"></iframe>
 
+
  <h1>Visualización – AG2 </h1>
 
 
 <h1>Visualización – AG3 </h1>
-
-
-
-
 
   </body>
 
